# aico-decorator-tutorial

./: README.md  pyproject.toml
src/aico_decorator_tutorial/: __init__.py  basic_functions.py  error_handling.py
src/aico_decorator_tutorial/utils/: decorators.py  exceptions.py  logger.py
src/fixtures/: basic.json  error.json
