[project]
name = "aico-decorator-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leo Turoff", email = "57533776+leoturoff@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["click>=8.3.1"]

[project.scripts]
decorators = "aico_decorator_tutorial:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
